--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -1,8 +1,11 @@
-<button (click)="selectedIndex = ''" class="add-column" style=" margin: -20px 29px;" *ngIf="i === selectedIndex"
+
+<!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  SETTINGS ICONS  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
+
+<button (click)="selectedIndex = ''" class="add-column" matTooltip="cancel" matTooltipPosition="above" style=" margin: -20px 29px;" *ngIf="i === selectedIndex"
     mat-icon-button>
     <mat-icon style="font-size: 25px;" class="full-icon">cancel</mat-icon>
 </button>
-<button (click)="selectedIndex = i" class="add-column" style=" margin: -20px 29px;" *ngIf="i !== selectedIndex"
+<button (click)="selectedIndex = i" class="add-column" matTooltip="settings" matTooltipPosition="above" style=" margin: -20px 29px;" *ngIf="i !== selectedIndex"
     mat-icon-button>
     <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
 </button>
@@ -10,14 +13,16 @@
     matTooltipPosition="above" mat-icon-button aria-label="ranking">
     <mat-icon style="font-size: 26px;" class="full-icon">view_list</mat-icon>
 </button>
-<button (click)="insertNewColumn()" class="add-column" style="margin: -20px 95px;" matTooltip="Add column"
+<!-- <button (click)="insertNewColumn()" class="add-column" style="margin: -20px 95px;" matTooltip="Add column"
     matTooltipPosition="above" mat-icon-button aria-label="ranking">
     <mat-icon style="font-size: 26px;" class="full-icon">next_plan</mat-icon>
-</button>
-<button (click)="toogleColumnResizer()" class="add-column" style="margin: -20px 125px;" matTooltip="Add column"
+</button> -->
+<button (click)="toogleColumnResizer()" class="add-column" style="margin: -20px 95px;" matTooltip="row settings"
     matTooltipPosition="above" mat-icon-button aria-label="ranking">
     <mat-icon style="font-size: 26px;" class="full-icon">swap_horizontal_circle</mat-icon>
 </button>
+<!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  END  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
+
 
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
 <div *ngIf="i === selectedIndex" class="mat-elevation-z4">
@@ -38,11 +43,11 @@
             <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RATING RANGE</div>
             <br>
 
-            <div>
+            <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
                 5 <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="5" max="10">
                 10 <br>
-                <label for="volume">{{rankingScaleValue}}</label>
             </div>
+            <label for="volume">{{rankingScaleValue}}</label>
             <hr>
 
         </div>
@@ -73,37 +78,39 @@
 <!--🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑 RATING TABLE 🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑-->
 
 
-<div *ngIf="isColumnResizerOn" class="mat-elevation-z2" 
-style="display: flex;flex-direction: row;justify-content: space-evenly;width: 86%;padding: 10px;">
+<!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺RAGE INPUTS FOR COLUMN SETTINGS ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
+<div *ngIf="isColumnResizerOn" class="mat-elevation-z2"
+    style="display: flex;flex-direction: row;justify-content: space-evenly;width: 86%;padding: 10px;">
 
     <div style="display: flex;flex-direction: column;align-items: center;">
-        <p>columns width:  {{columnsSlider}} px</p>
+        <p style="margin: 0 0 -12px;">columns width: {{columnsSlider}} px</p>
         <input type="range" style="margin: 20px;width: 140px;" (change)="setColumnWidth(columnsSlider)"
             [(ngModel)]="columnsSlider" class="slider-font-size" tickInterval="1" min="50" max="1000"
             [value]="columnsSlider">
-       
+
     </div>
     <div style="display: flex;flex-direction: column;align-items: center;">
-    <p>row height: {{rowHeightSlider}} px</p>
-    <input type="range" style="margin: 20px;width: 140px;" (change)="setSMALLTextLengthColumnHeight(rowHeightSlider)"
-        [(ngModel)]="rowHeightSlider" class="slider-font-size" tickInterval="1" min="2" max="10"
-        [value]="rowHeightSlider">
+        <p style="margin: 0 0 -12px;">row height: {{rowHeightSlider}} px</p>
+        <input type="range" style="margin: 20px;width: 140px;"
+            (change)="setSMALLTextLengthColumnHeight(rowHeightSlider)" [(ngModel)]="rowHeightSlider"
+            class="slider-font-size" tickInterval="1" min="2" max="10" [value]="rowHeightSlider">
     </div>
     <!-- <div style="display: flex;flex-direction: column;align-items: center;">
-        <p>row more text height: {{columnsSlider}} px</p>
+        <p style="margin: 0 0 -12px;">row more text height: {{columnsSlider}} px</p>
         <input type="range" style="margin: 20px;width: 140px;" (change)="setFontSize(columnsSlider)"
             [(ngModel)]="columnsSlider" class="slider-font-size" tickInterval="1" min="50" max="1000"
             [value]="columnsSlider">
         
     </div> -->
     <div style="display: flex;flex-direction: column;align-items: center;">
-    <p>font size: {{fontSizeRow}} px</p>
-    <input type="range" style="margin: 20px;width: 140px;" (change)="setFontSize(fontSizeRow)"
-        [(ngModel)]="fontSizeRow" class="slider-font-size" tickInterval="1" min="2" max="40"
-        [value]="fontSizeRow">
+        <p style="margin: 0 0 -12px;">font size: {{fontSizeRow}} px</p>
+        <input type="range" style="margin: 20px;width: 140px;" (change)="setFontSize(fontSizeRow)"
+            [(ngModel)]="fontSizeRow" class="slider-font-size" tickInterval="1" min="2" max="40" [value]="fontSizeRow">
     </div>
 </div>
 <!-- <mat-slider min="200" max="500" step="10" value="200" [(value)]="columnsSlider"></mat-slider><p>{{columnsSlider}}</p> -->
+<!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺  END  ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
+
 
 <div class="odd-style" style="overflow-x: scroll;">
     <div *ngFor="let testName of bmxItem.componentText; let y = index">
@@ -119,61 +126,46 @@ style="display: flex;flex-direction: row;justify-content: space-evenly;width: 86
                     <span *ngIf="selectedColumn === e" class="header-delete-icon" matTooltip="delete column"
                         matTooltipPosition="above" (click)="deleteColumn(testName[columnName])">x</span>
 
-                    <!-- 🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴 OLD CODE DEPRECATED 🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴 -->
-                    <!--  <input *ngIf="(y == 0) && columnName != 'rationale'"  style="text-align: center; font-weight: bold;color: #324395;" [style.width]="columnsSlider +'px'"  class="header-title-box"
-                        [(ngModel)]="testName[columnName]" value="testName[columnName]"> -->
-
-
-
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 TEXT AREA RENDERER 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
 
-                    <textarea *ngIf="y == 0 && bmxClientPageOveview" style="text-align: center; font-weight: bold;color: #324395;"
-                        [style.width]="columnsSlider +'px'" class="row-box" 
-                        [(ngModel)]="testName[columnName]" value="testName[columnName]"></textarea>
-
+                    <textarea *ngIf="y == 0 && bmxClientPageOveview"
+                        style="text-align: center; font-weight: bold;color: #324395;"
+                        [style.width]="columnsSlider +'px'" class="row-box" [(ngModel)]="testName[columnName]"
+                        value="testName[columnName]"></textarea>
 
                     <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 PARAGRAPH VIEW PAGE MODE 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
-                    <p  style="text-align: center; font-weight: bold;color: #324395;" [style.width]="columnsSlider +'px'" 
-                        *ngIf="y == 0 && !bmxClientPageOveview" >{{testName[columnName]}}</p>
-
-                </div>
-
-                <!-- <input class="row-box"  style="text-align: center;" [style.width]="columnsSlider +'px'" *ngIf="(y !== 0) && columnName != 'rationale'"
-                    [(ngModel)]="testName[columnName]" value="testName[columnName]"> [style.height]="columnsSlider +'px'"-->
+                    <p style="text-align: center; font-weight: bold;color: #324395;" [style.width]="columnsSlider +'px'"
+                        *ngIf="y == 0 && !bmxClientPageOveview">{{testName[columnName]}}</p>
+                </div>        
 
 
                 <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 TEXT AREA RENDERER 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
-                <!-- <textarea style="text-align: center;" [style.width]="columnsSlider +'px'"  
-                    class="row-box"
-                    *ngIf="(y !== 0) " [(ngModel)]="testName[columnName]"
-                    [value]="testName[columnName]"></textarea> -->
-
-                <!-- <mat-form-field style="text-align: center;" > -->
-                <textarea *ngIf="y !== 0 && bmxClientPageOveview " [style.width]="columnsSlider +'px'"  [style.font-size]="fontSizeRow +'px'"  cdkTextareaAutosize
+                <textarea *ngIf="y !== 0 && bmxClientPageOveview " [style.width]="columnsSlider +'px'"
+                    [style.font-size]="fontSizeRow +'px'" cdkTextareaAutosize
                     [cdkAutosizeMinRows]="(testName[columnName].length > 50)?rowHeightSlider:2"
                     style="outline: none;text-align: center;" class="row-box"
                     [(ngModel)]="testName[columnName]"></textarea>
-
-                <!-- </mat-form-field> -->
-
                 <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 PARAGRAPH VIEW PAGE MODE 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
-                <p *ngIf="y !== 0 && !bmxClientPageOveview" [style.font-size]="fontSizeRow +'px'"  [style.width]="columnsSlider +'px'" style="text-align: center;">{{testName[columnName]}}</p>
+                <p *ngIf="y !== 0 && !bmxClientPageOveview" [style.font-size]="fontSizeRow +'px'"
+                    [style.width]="columnsSlider +'px'" style="text-align: center;">{{testName[columnName]}}</p>
 
             </div>
 
-            <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ STARS ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
+            <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ STARS RENDERER ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
             <div style="text-align: center;min-width: 250px;">
-                <button *ngFor="let star of  testName.STARS; let x =  index" (click)="setRating(star.id,y)"
-                    [ngClass]="star.class" (mouseenter)="selectStar(star.id , y)" (mouseleave)="leaveStar(y)"
-                    style="outline: none;margin:-5px -8px;" mat-icon-button aria-label="ranking">
-                    <mat-icon *ngIf="(y !== 0)">{{star.icon}}</mat-icon>
-                    <!-- <mat-icon *ngIf="(y !== 0)" style="transform: rotate(0deg);">{{'crop_din'}}</mat-icon> -->
-                    <div class="rating-text" style="text-align: center;" *ngIf="(y === 0 && x === 0)">RATING</div>
-                </button>
+                
+                <div *ngIf="(y !== 0)">
+                    <button *ngFor="let star of  testName.STARS; let x =  index" (click)="setRating(star.id,y)"
+                        [ngClass]="star.class" (mouseenter)="selectStar(star.id , y)" (mouseleave)="leaveStar(y)"
+                        style="outline: none;margin:-5px -8px;" mat-icon-button aria-label="ranking">
+                        <mat-icon>{{star.icon}}</mat-icon>                       
+                    </button>
+                </div>
+                <div class="rating-text"   *ngIf="(y === 0 )">RATING</div>
             </div>
             <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ END STARS ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
 
-            <!-- TABLE ROW BUTTONS ICONS -->
+            <!--♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️ TABLE ROW ICONS ♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️-->
             <div style="min-width: 100px">
                 <button *ngIf="(y !== 0)" style="outline: none;margin:-5px -8px;" (click)="deletRow(y)" mat-icon-button
                     aria-label="ranking">
@@ -186,6 +178,7 @@ style="display: flex;flex-direction: row;justify-content: space-evenly;width: 86
                     <mat-icon>delete_outline</mat-icon>
                 </button>
             </div>
+             <!--♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️ END TABLE ROW ICONS ♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️-->
         </div>
     </div>
     <!-- <button *ngIf="i === selectedIndex" class="cancel" (click)="selectedIndex = ''" mat-icon-button>
