--- a/src/app/bmx/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.html
@@ -1,11 +1,16 @@
 <div class="main-container">
-    <button style="position: absolute;bottom: 30px;z-index: 9999999999;right: 30px;outline: none;" 
-    (click)="toggleViewPageMode()" mat-icon-button matTooltip="overview page" matTooltipPosition="left">
+  
+    <button *ngIf="isMenuActive11" style="position: absolute;bottom: 30px;z-index: 9999999999;right: 100px;outline: none;" 
+    (click)="toggleViewPageMode()" mat-icon-button matTooltip="design tools" matTooltipPosition="above">
         <mat-icon class="full-icon" style="font-size: 35px;">visibility
         </mat-icon>
     </button>
-    
-    <div *ngIf="bmxClientPageOveview" style="display: flex;border:brown 0px solid;width: 25%; height: 100vh;">
+    <button *ngIf="isMenuActive11" style="position: absolute;bottom: 30px;z-index: 9999999999;right: 30px;outline: none;" 
+    (click)="toggleViewPageModeDesign()" mat-icon-button matTooltip="full screen" matTooltipPosition="above">
+        <mat-icon class="full-icon" style="font-size: 35px;">settings_overscan
+        </mat-icon>
+    </button>
+    <div *ngIf="bmxClientPageDesignMode" style="display: flex;border:brown 0px solid;width: 25%; height: 100vh;">
 
         <!-- LOGO BRANDING 🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭-->
         <div class="logo-badge" style="font-size: 21px;overflow-x: hidden;">
@@ -301,8 +306,8 @@
 
 
     <!--  SURVEY CREATION & DESIGN 🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿-->
-    <div [ngClass]="bmxClientPageOveview?'page-design':'page-design-client'" *ngIf="isMenuActive11">
-        <app-survey-creation-design [isMenuActive11]="isMenuActive11" [bmxClientPageOveview]="bmxClientPageOveview">
+    <div [ngClass]="bmxClientPageDesignMode?'page-design':'page-design-client'" *ngIf="isMenuActive11">
+        <app-survey-creation-design [isMenuActive11]="isMenuActive11" [bmxClientPageDesignMode]="bmxClientPageDesignMode" [bmxClientPageOverview]="bmxClientPageOverview">
         </app-survey-creation-design>
     </div>
     <!-- END 🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿  SURVEY CREATION & DESIGN -->
