--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -12,7 +12,7 @@
 
             <div *ngIf="bmxItem.componentType === 'logo-header'" class="header">
                 <div style="position: absolute;right: 0px;">
-                    <button style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (click)="deleteComponent(i)"
+                    <button *ngIf="bmxClientPageOverview" style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (click)="deleteComponent(i)"
                         aria-label="delte">
                         <mat-icon style="font-size: 17px;">cancel</mat-icon>
                     </button>
@@ -53,7 +53,7 @@
             <div *ngIf="bmxItem.componentType === 'instructions' && displayInstructions" class="paragraph ">
                 <div class="emoji-handle">.</div>
                 <div style="display: flex;flex-direction: column;justify-content: flex-end;align-items: flex-end;">
-                    <button style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (click)="deleteComponent(i)"
+                    <button *ngIf="bmxClientPageOverview" style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (click)="deleteComponent(i)"
                         aria-label="delte">
                         <mat-icon style="font-size: 17px;">cancel</mat-icon>
                     </button>
@@ -64,10 +64,10 @@
                     [(ngModel)]="bmxItem.componentText" [data]="bmxItem.componentText" [config]="ckconfig">
                 </ckeditor>
 
-                <button *ngIf="i === selectedIndex" class="cancel" (click)="selectedIndex = '';" mat-icon-button>
+                <button *ngIf="i === selectedIndex && bmxClientPageOverview" class="cancel" (click)="selectedIndex = '';" mat-icon-button>
                     <mat-icon style="font-size: 25px;">cancel</mat-icon>
                 </button>
-                <button *ngIf="i !== selectedIndex" mat-icon-button class="edit-icon" (click)="selectedIndex = i">
+                <button *ngIf="i !== selectedIndex && bmxClientPageOverview" mat-icon-button class="edit-icon" (click)="selectedIndex = i">
                     <mat-icon style="font-size: 25px;">edit</mat-icon>
                 </button>
             </div>
@@ -78,7 +78,7 @@
             <div *ngIf="bmxItem.componentType === 'text-editor'" class="paragraph ">
                 <div class="emoji-handle">.</div>
                 <div style="display: flex;flex-direction: column;justify-content: flex-end;align-items: flex-end;">
-                    <button style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (click)="deleteComponent(i)"
+                    <button *ngIf="bmxClientPageOverview" style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (click)="deleteComponent(i)"
                         aria-label="delte">
                         <mat-icon style="font-size: 17px;">cancel</mat-icon>
                     </button>
@@ -89,10 +89,10 @@
                     [(ngModel)]="bmxItem.componentText" [data]="bmxItem.componentText" [config]="ckconfig">
                 </ckeditor>
 
-                <button *ngIf="i === selectedIndex" class="cancel" (click)="selectedIndex = '';" mat-icon-button>
+                <button *ngIf="i === selectedIndex && bmxClientPageOverview" class="cancel" (click)="selectedIndex = '';" mat-icon-button>
                     <mat-icon style="font-size: 25px;">cancel</mat-icon>
                 </button>
-                <button *ngIf="i !== selectedIndex" mat-icon-button class="edit-icon" (click)="selectedIndex = i">
+                <button *ngIf="i !== selectedIndex && bmxClientPageOverview" mat-icon-button class="edit-icon" (click)="selectedIndex = i">
                     <mat-icon style="font-size: 25px;">edit</mat-icon>
                 </button>
             </div>
@@ -103,12 +103,12 @@
             <div *ngIf="bmxItem.componentType === 'rate-scale'" class="paragraph">
                 <div class="emoji-handle">.</div>
                 <div style="display: flex;flex-direction: column;justify-content: flex-end;align-items: flex-end;">
-                    <button style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (click)="deleteComponent(i)"
+                    <button *ngIf="bmxClientPageOverview" style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (click)="deleteComponent(i)"
                         aria-label="delte">
                         <mat-icon style="font-size: 17px;">cancel</mat-icon>
                     </button>
                 </div>
-                <app-rating-scale [bmxItem]="bmxItem" [i]='i' [bmxClientPageOveview]="bmxClientPageOveview"></app-rating-scale>
+                <app-rating-scale [bmxItem]="bmxItem" [i]='i' [bmxClientPageDesignMode]="bmxClientPageDesignMode" [bmxClientPageOverview]="bmxClientPageOverview"></app-rating-scale>
 
             </div>
             <!-- END STARS SCALE 👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽 -->
@@ -145,7 +145,7 @@
 
         <!-- PAGE BUTTONS AND DIRECTIONS 1 2 3 📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲-->
         <div class="page-buttons">
-            <div [ngClass]="bmxClientPageOveview?'page-buttons-heigth-40':'page-buttons-heigth-minus-50'">
+            <div [ngClass]="bmxClientPageDesignMode?'page-buttons-heigth-40':'page-buttons-heigth-minus-50'">
                 <button (click)="changePage('previous')" mat-icon-button>
                     <mat-icon class="full-icon">chevron_left</mat-icon>
                 </button>
@@ -168,8 +168,8 @@
 
 
     <!-- 🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵  RIGHT SIDE MENU 🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵-->
-    <!-- <div class="project-info" *ngIf="bmxClientPageOveview" style="border: pink solid 1px; width: 25%; height: 100vh;"> -->
-    <div class="project-info" *ngIf="true">
+    <!-- <div class="project-info" *ngIf="bmxClientPageDesignMode" style="border: pink solid 1px; width: 25%; height: 100vh;"> -->
+    <div class="project-info" *ngIf="bmxClientPageOverview">
 
         <div style="display: flex;flex-direction: column;margin-top: 50px;">
             <button (click)="createNewBmxComponent('logo-header')" mat-icon-button matTooltip="add header"
@@ -205,7 +205,11 @@
                 <mat-icon class="full-icon">delete_sweep
                 </mat-icon>
             </button>
-           
+            <button *ngIf="true" (click)="bmxClientPageOverview=!bmxClientPageOverview" mat-icon-button matTooltip="reset template"
+                matTooltipPosition="right">
+                <mat-icon class="full-icon">visibility
+                </mat-icon>
+            </button>                      
         </div>
     </div>
 
