using ratinale column dedicated sizing

--- a/src/app/bmx/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.html
@@ -2,15 +2,15 @@
   
     <button *ngIf="isMenuActive11" style="position: absolute;bottom: 30px;z-index: 9999999999;right: 100px;outline: none;" 
     (click)="toggleViewPageMode()" mat-icon-button matTooltip="design tools" matTooltipPosition="above">
-        <mat-icon class="full-icon" style="font-size: 35px;">visibility
+        <mat-icon class="full-icon" style="font-size: 35px;">handyman
         </mat-icon>
     </button>
     <button *ngIf="isMenuActive11" style="position: absolute;bottom: 30px;z-index: 9999999999;right: 30px;outline: none;" 
     (click)="toggleViewPageModeDesign()" mat-icon-button matTooltip="full screen" matTooltipPosition="above">
-        <mat-icon class="full-icon" style="font-size: 35px;">settings_overscan
+        <mat-icon class="full-icon" style="font-size: 35px;">visibility
         </mat-icon>
     </button>
-    <div *ngIf="bmxClientPageDesignMode" style="display: flex;border:brown 0px solid;width: 25%; height: 100vh;">
+    <div *ngIf="bmxClientPageDesignMode" style="display: flex;border:brown 0px solid;width: 17%; height: 100vh;">
 
         <!-- LOGO BRANDING 🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭-->
         <div class="logo-badge" style="font-size: 21px;overflow-x: hidden;">
