--- a/src/app/bmx/bmx-creator/participants-email/participants-email.component.html
+++ b/src/app/bmx/bmx-creator/participants-email/participants-email.component.html
@@ -139,14 +139,14 @@
                     </td>
                 </ng-container>
 
-                <ng-container matColumnDef="firstName">
+                <ng-container matColumnDef="FirstName">
                     <th mat-header-cell *matHeaderCellDef> First Name </th>
-                    <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.FirstName}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="lastName">
+                <ng-container matColumnDef="LastName">
                     <th mat-header-cell *matHeaderCellDef> Last Name </th>
-                    <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.LastName}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="group">
@@ -154,14 +154,14 @@
                     <td mat-cell *matCellDef="let element"> {{element.group}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="subGroup">
+                <ng-container matColumnDef="SubGroup">
                     <th mat-header-cell *matHeaderCellDef> Subgroup </th>
-                    <td mat-cell *matCellDef="let element"> {{element.subGroup}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.SubGroup}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="status">
+                <ng-container matColumnDef="Status">
                     <th mat-header-cell *matHeaderCellDef> Status </th>
-                    <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.Status}} </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
