--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -1,7 +1,6 @@
 
-<div *ngIf="bmxClientPageOverview">
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  SETTINGS ICONS  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
-
+<div *ngIf="bmxClientPageOverview">
     <button (click)="selectedIndex = ''" class="add-column" matTooltip="cancel" matTooltipPosition="above" style=" margin: -20px 29px;" *ngIf="i === selectedIndex"
     mat-icon-button>
     <mat-icon style="font-size: 25px;" class="full-icon">cancel</mat-icon>
@@ -22,8 +21,8 @@ matTooltipPosition="above" mat-icon-button aria-label="ranking">
 matTooltipPosition="above" mat-icon-button aria-label="ranking">
 <mat-icon style="font-size: 26px;" class="full-icon">swap_horizontal_circle</mat-icon>
 </button>
-<!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  END  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
 </div>
+<!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  END  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
 
 
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
@@ -86,7 +85,6 @@ matTooltipPosition="above" mat-icon-button aria-label="ranking">
     flex-direction: row;
     justify-content: space-evenly;
     width: 86%;
-    /* padding: 10px; */
     position: relative;
     top: -15px;
     left: 40px;
@@ -95,9 +93,8 @@ matTooltipPosition="above" mat-icon-button aria-label="ranking">
     <div style="display: flex;flex-direction: column;align-items: center;">
         <p style="margin: 0 0 -12px;">columns width: {{columnsSlider}} px</p>
         <input type="range" style="margin: 20px;width: 140px;" (change)="setColumnWidth(columnsSlider)"
-            [(ngModel)]="columnsSlider" class="slider-font-size" tickInterval="1" min="250" max="1000"
+            [(ngModel)]="columnsSlider" class="slider-font-size" tickInterval="1" min="50" max="1000"
             [value]="columnsSlider">
-
     </div>
     <div style="display: flex;flex-direction: column;align-items: center;">
         <p style="margin: 0 0 -12px;">row height: {{rowHeightSlider}} px</p>
@@ -109,8 +106,7 @@ matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <p style="margin: 0 0 -12px;">ratinale width: {{rationalewidth}} px</p>
         <input type="range" style="margin: 20px;width: 140px;" (change)="setRationalewidth(rationalewidth)"
             [(ngModel)]="rationalewidth" class="slider-font-size" tickInterval="1" min="50" max="1000"
-            [value]="rationalewidth">
-        
+            [value]="rationalewidth">        
     </div>
     <div style="display: flex;flex-direction: column;align-items: center;">
         <p style="margin: 0 0 -12px;">font size: {{fontSizeRow}} px</p>
@@ -122,13 +118,13 @@ matTooltipPosition="above" mat-icon-button aria-label="ranking">
 <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺  END  ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
 
 
-<div class="odd-style" style="overflow-x: scroll;">
+<div class="scroller-style main-container">
     <div *ngFor="let testName of bmxItem.componentText; let y = index">
 
         <div class="test-name-table">
 
             <div *ngFor="let columnName of columnsNames; let e =  index" style="text-align: center;margin:10px 10px;"
-                [style.width]="columnsSlider +'px'">
+            [style.width]="(columnName == 'rationale' )?rationalewidth + 'px':columnsSlider +'px'" >
 
                 <div *ngIf="(y == 0)" class="header-title" (mouseenter)="selectedColumn = e"
                     (mouseleave)="selectedColumn = ''">
@@ -136,26 +132,32 @@ matTooltipPosition="above" mat-icon-button aria-label="ranking">
                     <span *ngIf="selectedColumn === e" class="header-delete-icon" matTooltip="delete column"
                         matTooltipPosition="above" (click)="deleteColumn(testName[columnName])">x</span>
 
-                    <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 TEXT AREA RENDERER 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
+                    <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
 
-                    <textarea *ngIf="y == 0 && bmxClientPageDesignMode"
-                    [style.width]="(columnName == 'rationale'  || columnName == 'name')?rationalewidth + 'px':rationalewidth +'px'" 
+                    <textarea *ngIf="y == 0 && bmxClientPageDesignMode"                    
                     [style.font-size]="fontSizeRow +'px'"
                     style="text-align: center; font-weight: bold;color: #324395;"
                         class="row-box" [(ngModel)]="testName[columnName]"
                         value="testName[columnName]"></textarea>
 
-                    <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 PARAGRAPH VIEW PAGE MODE 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
-                    <p style="text-align: center; font-weight: bold;color: #324395;margin: 0 0 0px;" 
-                    [style.width]="(columnName == 'rationale'  || columnName == 'name')?rationalewidth + 'px':columnsSlider +'px'" 
+                        <!-- <textarea *ngIf=" bmxClientPageDesignMode " 
+                        [style.width]="rationalewidth + 'px'" 
+                            [style.font-size]="fontSizeRow +'px'" cdkTextareaAutosize
+                            [cdkAutosizeMinRows]="(testName[columnName].length > 50)?rowHeightSlider:2"
+                            style="outline: none;text-align: center;" class="row-box"
+                            [(ngModel)]="testName[columnName]"></textarea>cev -->
+
+                    <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 HEADER PARAGRAPH VIEW PAGE MODE 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
+                    <p style="text-align: center; font-weight: bold;color: #324395;margin: 0 0 0px;"                     
                     [style.font-size]="fontSizeRow +'px'"
-                        *ngIf="y == 0 && !bmxClientPageDesignMode">{{testName[columnName]}}</p>
+                        *ngIf=" !bmxClientPageDesignMode">{{testName[columnName]}}</p>
                 </div>        
 
+                <div class="header-title">
 
-                <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 TEXT AREA RENDERER 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
+                <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 ROW TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
                 <textarea *ngIf="y !== 0 && bmxClientPageDesignMode " 
-                [style.width]="(columnName == 'rationale'  || columnName == 'name')?rationalewidth + 'px':columnsSlider +'px'" 
+                [style.width]="(columnName == 'rationale')?rationalewidth + 'px':columnsSlider +'px'" 
                     [style.font-size]="fontSizeRow +'px'" cdkTextareaAutosize
                     [cdkAutosizeMinRows]="(testName[columnName].length > 50)?rowHeightSlider:2"
                     style="outline: none;text-align: center;" class="row-box"
@@ -163,11 +165,10 @@ matTooltipPosition="above" mat-icon-button aria-label="ranking">
                 <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 PARAGRAPH VIEW PAGE MODE 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
                 <p *ngIf="y !== 0 && !bmxClientPageDesignMode" [style.font-size]="fontSizeRow +'px'"
                     
-                [style.width]="(columnName == 'rationale'  || columnName == 'name')?rationalewidth + 'px':columnsSlider +'px'"  
+                [style.width]="(columnName == 'rationale')?rationalewidth + 'px':columnsSlider +'px'"  
                 style="text-align: center;margin: 0 0 0px;">{{testName[columnName]}}</p>
-
             </div>
-
+        </div>
             <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ STARS RENDERER ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
             <div style="text-align: center;min-width: 250px;">
                 
