project information layout fix

--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.scss
@@ -69,8 +69,8 @@
 }
 
 .bmx-page {
-    width: 628%;
-    height: 91vh;
+    // width: 628%;
+    height: 90.8vh;
     overflow-y: scroll;
     @include BoxShadow(2);
 }
